# libp7-baical

./: CMakeLists.txt  README.md
CMake/: libp7-baical-config.cmake.in
Examples/: CMakeLists.txt
Examples/C/: CMakeLists.txt
Examples/Cpp/: CMakeLists.txt  Main.cpp
Headers/: GTypes.h  P7_Client.h  P7_Extensions.h  P7_Trace.h
Sources/: ClText.cpp  ClTextSink.h  Client.cpp  Client.h  Telemetry.h  Trace.cpp  Trace.h
Tests/Speed/: Speed.cpp
Tests/Trace/: Main.cpp
Wrappers/C#/: P7.cs
Wrappers/Py/: P7.py
